# fast-annotation

./: .gitignore  CMakeLists.txt  README.md
data/label/: gt_cmt_hoai.txt  gt_cmt_khanh.txt  gt_cmt_tu.txt
src/: annotateRect.cpp  extractRect.cpp
src/libs/: Utils.cpp  WorkImage.cpp  WorkImage.h
